--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,4 +25,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: ls -la
+    - run: npm install
+    - run: npm run start
