--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.18",
-    "sequelize-cli": "^6.4.1",
     "sucrase": "^3.21.1"
   },
   "dependencies": {
@@ -27,8 +26,8 @@
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^3.0.0",
+    "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
-    "sequelize": "^6.21.0"
+    "validator": "^13.7.0"
   }
 }
